--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Logs
 logs
 *.log
@@ -102,3 +103,23 @@ dist
 
 # TernJS port file
 .tern-port
+=======
+test/javasource/
+test/deployment/
+test/.classpath
+test/.project
+test/userlib/
+test/.classpath
+test/.project
+*.launch
+*.tmp
+*.lock
+.idea/
+
+dist/
+
+node_modules/
+.editorconfig
+*DS_Store*
+.vscode/
+*.bak
